--- a/hapsay360/package.json
+++ b/hapsay360/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-query": "^5.90.8",
     "lucide-react": "^0.553.0",
+    "mongodb": "^7.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
